--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "config": "^3.3.9",
     "discord.js": "^14.14.1",
-    "dotenv": "^16.3.1",
-    "node-fetch": "^2.7.0"
+    "dotenv": "^16.3.2",
+    "node-fetch": "^2.7.0",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.35.2"
   }
 }
