--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "config": "^3.3.9",
     "discord.js": "^14.14.1",
     "dotenv": "^16.3.2",
+    "mysql2": "^3.11.0",
     "node-fetch": "^2.7.0",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.35.2"
+    "sequelize": "^6.35.2",
+    "sqlite3": "^5.1.7"
   }
 }
